--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "homepage": "https://github.com/CaimanBrujo/template-next.js#readme",
   "dependencies": {
     "@supabase/supabase-js": "^2.51.0",
+    "dotenv": "^17.2.3",
+    "googleapis": "^162.0.0",
     "next": "^15.3.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
